--- a/climbPage/dogPage.html
+++ b/climbPage/dogPage.html
@@ -49,14 +49,14 @@ Rock climbing
     
     .overlay {
   position: absolute;
-    top: 150px;
+    top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   background-color: brown;
   overflow: hidden;
   width: 0;
-  height: 55%;
+  height: 100%;
   transition: .5s ease;
 }
 
